Fix UI lag: move expensive git I/O off UI thread
- Add UIPerfLogger for zero-overhead diagnostic timing (-Dcoarchi.ui.perf.logging=true)
- HistoryView: compute action shouldBeEnabled() on virtual threads instead of UI thread
  (RestoreCommitAction, UndoLastCommitAction, ResetToRemoteCommitAction all did git I/O)
- HistoryTableViewer: load commits on background thread, deliver via asyncExec with
  setRedraw(false/true), staleness tracking via AtomicReference, cap at 500 commits
- BranchesView: use virtual threads with staleness tracking for branch loading
- ModelRepositoryTreeViewer: parallelize updateStatusCache using virtual threads per repo,
  refresh cache on background thread before UI callback
- AbstractModelAction: add setRepositoryQuiet() to store repo without triggering shouldBeEnabled()
- ExtractModelFromCommitAction/RestoreCommitAction: setCommit() no longer triggers shouldBeEnabled()
- RefreshModelAction/PushModelAction/MergeBranchAction: run ProgressMonitorDialog on background
  thread (fork=true), use IProgressMonitor instead of ProgressMonitorDialog
- SwitchBranchAction/GraficoModelLoader: add UIPerfLogger timing instrumentation